remove useless content + angular 22 + signals + service + better test coverage + various best practices